syntax = "proto3";

package protos;

option go_package = "protos/server/user_proto";


service UserService {
  // Create User, Dont assign ID because generate automatically by system
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}

  //Get User By ID
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse){}

  // Update User
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}

}

message Watched {
  int64 id_watched = 1;
  string id_movie = 2;
  int64 id_user = 4;
  float rate = 3;
}

message Wishlist {
  int64 id_wishlist = 1;
  string id_movie = 2;
  int64 id_user = 3;
}

message User {
  int64 id = 1;
  string  name = 2;
  string  email = 3;
  string  password = 4;
  string phone = 5;
  float payment = 6;
  int32 loyalty = 7;
  repeated Watched watched = 8;
  repeated Wishlist wishlist = 9;
}


// Create User
//TODO Update with name, email, password, phone, payment, loyalty
message CreateUserRequest{
  int64 id = 1;
  string  name = 2;
  string  email = 3;
  string  password = 4;
  string phone = 5;
  float payment = 6;
  int32 loyalty = 7;
}

message CreateUserResponse{
  User user = 1;
}

// End Create User

// Get By ID
//TODO: Request By ID of user
message GetUserByIdRequest{
  int64 id_user = 1;
}

message GetUserByIdResponse {
  User user = 1;
}
// END Get By ID


// UPDATE USER
//TODO: update with all key and value of user schema
message UpdateUserRequest{
  User user = 1;
}

message UpdateUserResponse{
  User user = 1;
}
// END Update User




